--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,11 @@
-# Compiled class file
-*.class
+# Maven object files
+**/target/*
 
-# Log file
-*.log
+# macOS Finder artifacts
+**/.DS_Store
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# vi editor artifacts
+**/*.swp
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
