Added an example service and injected into the ZUL page's controller.
The injection is more of a manual lookup at this point.

--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -9,11 +9,12 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>test-war</artifactId>
-  <name>Cornerstone :: Test WAR</name>
-  <packaging>war</packaging>
+  <artifactId>test-service</artifactId>
+  <name>Cornerstone :: Test service</name>
+  <packaging>bundle</packaging>
 
   <build>
+    <!--
     <resources>
       <resource>
         <directory>${project.basedir}/src/main/feature</directory>
@@ -21,32 +22,20 @@
         <targetPath>${project.build.directory}/feature</targetPath>
       </resource>
     </resources>
+    -->
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Import-Package>
-              org.zkoss.zk.au.http,
-              org.zkoss.zk.ui.http,
-              org.zkoss.zk.ui.impl,
-              *
-            </Import-Package>
-            <Web-ContextPath>cornerstone</Web-ContextPath>
+            <Export-Package>
+              au.id.raboczi.cornerstone.test_service
+            </Export-Package>
           </instructions>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <packagingExcludes>WEB-INF/lib/*</packagingExcludes>
-          <archive>
-            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-          </archive>
-        </configuration>
-      </plugin>
+      <!--
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -69,34 +58,14 @@
           </execution>
         </executions>
       </plugin>
+      -->
     </plugins>
   </build>
 
   <dependencies>
     <dependency>
-      <groupId>au.id.raboczi.cornerstone</groupId>
-      <artifactId>test-service</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.zkoss.zk</groupId>
-      <artifactId>zk</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.zkoss.zk</groupId>
-      <artifactId>zul</artifactId>
     </dependency>
   </dependencies>
 
