--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <inceptionYear>2019</inceptionYear>
 
   <modules>
+    <module>test-service</module>
     <module>test-war</module>
     <module>dist</module>
   </modules>
@@ -105,8 +106,19 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>  <!-- This version of the Servlet API is specified by OSGi R6 section 140.1 "HTTP Whiteboard Specification" -->
+      </dependency>
+      <dependency>
         <groupId>org.osgi</groupId>
         <artifactId>osgi.cmpn</artifactId>
+        <version>${osgi.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>osgi.core</artifactId>
         <version>${osgi.version}</version>
         <scope>provided</scope>
       </dependency>
