--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -64,6 +64,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>io.reactivex.rxjava3</groupId>
+      <artifactId>rxjava</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
     </dependency>
