Fixed a reversion in test-war; the ZEL library is dynamically accessed and needs to be explicitly added to the import-package list.

--- a/test-war/pom.xml
+++ b/test-war/pom.xml
@@ -28,6 +28,7 @@
         <configuration>
           <instructions>
             <Import-Package>
+              org.zkoss.zel.impl,
               org.zkoss.zk.au.http,
               org.zkoss.zk.ui.http,
               org.zkoss.zk.ui.impl,
