More experimentation with various event-handling frameworks.
Added OSGi EventAdmin-based events.
Implemented a custom ZK EventQueueProvider.

--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
   <inceptionYear>2019</inceptionYear>
 
   <modules>
+    <module>dist</module>
     <module>test-service</module>
     <module>test-war</module>
-    <module>dist</module>
+    <module>zk</module>
   </modules>
 
   <licenses>
