--- a/zk/pom.xml
+++ b/zk/pom.xml
@@ -32,6 +32,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.ops4j.pax.web</groupId>
+      <artifactId>pax-web-extender-war</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zk</artifactId>
     </dependency>
