Broke various components apart.
Test service's API is now in the separate bundle.
The ZK support files from Test WAR are now in their own bundle for sharing.
Deactivated the custom ZK event queue provider (it requires more than a simple wrapper to implement properly).

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,10 @@
   <modules>
     <module>dist</module>
     <module>test-service</module>
+    <module>test-service-api</module>
     <module>test-war</module>
     <module>zk</module>
+    <module>zk-event-queue-provider</module>
   </modules>
 
   <licenses>
