Factored test-service-zk out of test-war.
This demonstrates how ZK macros can be packaged into library bundles.

--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,12 @@
   <modules>
     <module>test-service</module>
     <module>test-service-api</module>
+    <module>test-service-zk</module>
     <module>test-war</module>
     <module>zk</module>
     <module>zk-event-queue-provider</module>
 
-    <module>dist</module>  <!-- Must go last, because Maven is unaware of dependencies within features.xml -->
+    <module>dist</module>  <!-- Must go last, because Maven is unaware of dependencies within feature.xml -->
   </modules>
 
   <licenses>
