--- a/test-war/pom.xml
+++ b/test-war/pom.xml
@@ -28,6 +28,7 @@
         <configuration>
           <instructions>
             <Import-Package>
+              au.id.raboczi.cornerstone.test_service.zk,
               org.zkoss.zel.impl,
               org.zkoss.zk.au.http,
               org.zkoss.zk.ui.http,
