--- a/test-service-zk/pom.xml
+++ b/test-service-zk/pom.xml
@@ -29,12 +29,17 @@
 
   <dependencies>
     <dependency>
-      <groupId>au.id.raboczi.cornerstone</groupId>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>service-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>test-service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>au.id.raboczi.cornerstone</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>zk</artifactId>
       <version>${project.version}</version>
     </dependency>
