--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,13 @@
     <java.source.version>1.8</java.source.version>
     <java.target.version>${java.source.version}</java.target.version>
     <karaf.version>4.2.8</karaf.version>
-    <pax-web.version>7.2.14</pax-web.version>  <!-- this should match whatever is bundled with ${karaf.version} -->
     <osgi.version>6.0.0</osgi.version>
+    <pax-web.version>7.2.14</pax-web.version>  <!-- this should match whatever is bundled with ${karaf.version} -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <servlet-api.version>3.1.0</servlet-api.version>  <!-- This version of the Servlet API is specified by OSGi R6 section 140.1 "HTTP Whiteboard Specification" -->
     <zk.version>9.0.0</zk.version>  <!-- usually the same as zk.version.osgi unless there's qualifier, e.g. 9.0.0-SNAPSHOT -->
     <zk.version.osgi>9.0.0</zk.version.osgi>  <!-- usually the same as zk.version unless there's a qualifier, e.g. 9.0.0.SNAPSHOT -->
     <zk.version.range>[9.0,10)</zk.version.range>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
@@ -154,7 +154,7 @@
               <link>https://osgi.org/javadoc/r6/cmpn</link>
               <link>https://www.zkoss.org/javadoc/${zk.version}/zk</link>
             </links>
-            <overview>overview.html</overview>
+            <overview>src/javadoc/overview.html</overview>
           </configuration>
         </plugin>
 
@@ -168,6 +168,12 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>2.0.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -189,16 +195,55 @@
             <id>validate</id>
             <phase>process-sources</phase>
             <configuration>
-              <configLocation>checkstyle.xml</configLocation>
+              <configLocation>src/checkstyle/checkstyle.xml</configLocation>
               <encoding>UTF-8</encoding>
               <consoleOutput>true</consoleOutput>
               <failsOnError>true</failsOnError>
               <linkXRef>false</linkXRef>
-              <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
+              <suppressionsLocation>src/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
             </configuration>
             <goals>
               <goal>check</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>  <!-- http://www.mojohaus.org/license-maven-plugin/examples/example-thirdparty.html -->
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <licenseName>lgpl_v3</licenseName>
+          <organizationName>Simon Raboczi</organizationName>
+          <useMissingFile>true</useMissingFile>
+          <useRepositoryMissingFiles>true</useRepositoryMissingFiles>
+          <includes>
+            <include>**/*.java</include>
+          </includes>
+          <!-- Because package doc comments precede the package declaration, the license plugin's remove-file-header goal breaks them. -->
+          <excludes>
+            <exclude>**/package-info.java</exclude>
+          </excludes>
+          <licenseMerges>
+            <licenseMerge>Apache v2|The Apache Software License, Version 2.0|Apache License, Version 2.0|Apache License, version 2.0|Apache License 2.0|Apache 2.0 License|Apache 2.0|Apache 2|ALv2</licenseMerge>
+            <licenseMerge>BSD|BSD License|New BSD License|The BSD License|BSD 3-clause New License</licenseMerge>
+            <licenseMerge>CDDL 1.1|Common Development and Distribution License</licenseMerge>
+            <licenseMerge>CDDL/GPLv2+CE|CDDL + GPLv2 with classpath exception</licenseMerge>
+            <licenseMerge>Eclipse Distribution v1|Eclipse Distribution License - v 1.0|Eclipse Distribution License v. 1.0|EDL 1.0</licenseMerge>
+            <licenseMerge>Eclipse Public v1.0|Eclipse Public License - v 1.0|Eclipse Public License</licenseMerge>
+            <licenseMerge>GPL2 w/ CPE|GNU General Public License, Version 2 with the Classpath Exception</licenseMerge>
+            <licenseMerge>LGPL|GNU LESSER GENERAL PUBLIC LICENSE</licenseMerge>
+            <licenseMerge>LGPL v2.1|LGPL, version 2.1</licenseMerge>
+            <licenseMerge>LGPL v3|GNU Lesser General Public License, Version 3.0|GNU LESSER GENERAL PUBLIC LICENSE, Version 3|lgpl_v3</licenseMerge>
+            <licenseMerge>MIT License|The MIT License</licenseMerge>
+          </licenseMerges>
+        </configuration>
+        <executions>
+          <execution>
+            <id>update-file-header</id>
+            <goals>
+              <goal>update-file-header</goal>
+            </goals>
+            <phase>process-sources</phase>
           </execution>
         </executions>
       </plugin>
