Added the beginnings of a user account management service.
Enabled Checker Framework's internationalization validation.
The "italian" resource bundles are actually just pig latin for testing purposes.

--- a/test-war/pom.xml
+++ b/test-war/pom.xml
@@ -29,6 +29,7 @@
           <instructions>
             <Import-Package>
               au.id.raboczi.cornerstone.test_service.zk,
+              au.id.raboczi.cornerstone.user_service.zk,
               org.zkoss.zel.impl,
               org.zkoss.zk.au.http,
               org.zkoss.zk.ui.http,
