--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
     <module>test-service-api</module>
     <module>test-service-zk</module>
     <module>test-war</module>
+    <module>user-service</module>
+    <module>user-service-api</module>
+    <module>user-service-zk</module>
     <module>zk</module>
     <module>zk-event-queue-provider</module>
 
@@ -138,7 +141,7 @@
               <!-- Add all the checkers you want to enable here -->
               <!-- <annotationProcessor>org.checkerframework.checker.formatter.FormatChecker</annotationProcessor> -->
               <annotationProcessor>org.checkerframework.checker.i18n.I18nChecker</annotationProcessor>
-              <!-- <annotationProcessor>org.checkerframework.checker.i18nformatter.I18nFormatterChecker</annotationProcessor> -->
+              <annotationProcessor>org.checkerframework.checker.i18nformatter.I18nFormatterChecker</annotationProcessor>
               <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
               <!-- <annotationProcessor>org.checkerframework.checker.signature.SignatureChecker</annotationProcessor> -->
             </annotationProcessors>
@@ -156,7 +159,6 @@
 
               <!-- Optionally, -Awarns turns type-checking errors into warnings. -->
               <!-- <arg>-Awarns</arg> -->
-
             </compilerArgs>
           </configuration>
         </plugin>
@@ -205,6 +207,12 @@
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>3.2.3</version>
         </plugin>
@@ -219,6 +227,12 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>license-maven-plugin</artifactId>
           <version>2.0.0</version>
+        </plugin>
+
+        <plugin>
+          <groupId>pl.project13.maven</groupId>
+          <artifactId>git-commit-id-plugin</artifactId>
+          <version>4.0.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -306,6 +320,32 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>get-the-git-infos</id>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <generateGitPropertiesFile>true</generateGitPropertiesFile>
+          <generateGitPropertiesFilename>${project.build.outputDirectory}/META-INF/git.properties</generateGitPropertiesFilename>
+          <includeOnlyProperties>
+            <includeOnlyProperty>git.branch</includeOnlyProperty>
+            <includeOnlyProperty>git.build.version</includeOnlyProperty>
+            <includeOnlyProperty>git.closest.tag.name</includeOnlyProperty>
+            <includeOnlyProperty>git.commit.id</includeOnlyProperty>
+            <includeOnlyProperty>git.dirty</includeOnlyProperty>
+            <includeOnlyProperty>git.remote.origin.url</includeOnlyProperty>
+            <includeOnlyProperty>git.tags</includeOnlyProperty>
+            <includeOnlyProperty>git.total.commit.count</includeOnlyProperty>
+          </includeOnlyProperties>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -348,6 +388,13 @@
         <groupId>org.osgi</groupId>
         <artifactId>osgi.core</artifactId>
         <version>${osgi.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.25</version>
         <scope>provided</scope>
       </dependency>
 
@@ -426,7 +473,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.1.0</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -435,6 +481,29 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>pl.project13.maven</groupId>
+            <artifactId>git-commit-id-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>validate-the-git-infos</id>
+                <goals>
+                  <goal>validateRevision</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <validationProperties>
+                <validationProperty>
+                  <name>all changes committed to git repository</name>
+                  <value>${git.dirty}</value>
+                  <shouldMatchTo>false</shouldMatchTo>
+                </validationProperty>
+              </validationProperties>
+            </configuration>
           </plugin>
         </plugins>
       </build>
