Per-bundle localization validation is now enabled via the i18n.propfiles property in the pom.xmls.
Kludged TestController into passing i18n type checkers.

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,8 @@
               <arg>-Astubs=${project.parent.basedir}/src/checkerframework</arg>
               <arg>-AstubWarnIfNotFound</arg>
 
+              <arg>-Apropfiles=${i18n.propfiles}</arg>
+
               <!-- Optionally, -Awarns turns type-checking errors into warnings. -->
               <!-- <arg>-Awarns</arg> -->
             </compilerArgs>
