--- a/user-service-zk/pom.xml
+++ b/user-service-zk/pom.xml
@@ -13,6 +13,10 @@
   <name>Cornerstone :: User service ZK UI</name>
   <packaging>bundle</packaging>
 
+  <properties>
+    <i18n.propfiles>${basedir}/src/main/resources/au/id/raboczi/cornerstone/user_service/zk/UserController.properties</i18n.propfiles>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
@@ -22,20 +26,6 @@
           <instructions>
             <Export-Package>au.id.raboczi.cornerstone.user_service.zk</Export-Package>
           </instructions>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>
-            <arg>-J-Xbootclasspath/p:${errorProneJavac}</arg>
-            <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
-            <arg>-Astubs=${project.parent.basedir}/src/checkerframework</arg>
-            <arg>-AstubWarnIfNotFound</arg>
-            <arg>-Apropfiles=${basedir}/src/main/resources/au/id/raboczi/cornerstone/user_service/zk/UserController.properties</arg>
-          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
