Improvements to localization bundle handling.
Resource bundle property files now follow a convention of appearing in WEB-INF/zk-label within the bundle classpath.
The login button shown by the user macro now presents a login dialog.

--- a/user-service-zk/pom.xml
+++ b/user-service-zk/pom.xml
@@ -14,7 +14,10 @@
   <packaging>bundle</packaging>
 
   <properties>
+<!--
     <i18n.propfiles>${basedir}/src/main/resources/au/id/raboczi/cornerstone/user_service/zk/UserController.properties</i18n.propfiles>
+-->
+    <i18n.propfiles>${basedir}/src/main/resources/WEB-INF/zk-label.properties</i18n.propfiles>
   </properties>
 
   <build>
